--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,3 +5,6 @@ logstash_major: # Supported versiones: 2.1 .
 # beats weblogic
 logstash_timezone: #
 logstash_beats_port: 5000 #
+
+logstash_elasticsearch_host: localhost #
+logstash_elasticsearch_port: 9200 #
